--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -35,7 +35,7 @@
     position: relative;
 
   animation:
-    typing 1.3s steps(11, end),
+    typing .5s steps(11, end),
     blink-caret 0.5s linear infinite;
     padding-bottom: 70px;
 }
