aligned project items

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     font-family: 'Muli', sans-serif;
+    align-items: center;
 
   }
   .projects .projectTitle {
