--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -23,6 +23,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
+    align-items: center;
   }
 
   /* MENU ITEM STYLING */
