--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,13 +1,14 @@
 .footer {
-    width: 100%;
-    height: 100px;
-    background: #21325e;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 10px;
-
+  width: 100%;
+  height: 100px;
+  background: #21325e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10px;
+  position: absolute;
+  bottom: 0;
   }
 
   .socialMedia svg {
