--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -39,6 +39,8 @@
     text-align: center;
     margin-left: 20px;
     margin-top: 145px;
+    background-color: #21325E;
+
 
 
 
@@ -56,11 +58,14 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
   }
 
   .projectItem h1 {
     font-size: 25px;
     font-weight: lighter;
+    color: white;
+    background-color: #21325E;
   }
 
   @media only screen and (max-width: 1300px) {
@@ -82,5 +87,6 @@
     .projectItem {
       width: 300px;
       height: 300px;
+
     }
   }
