--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,7 +1,7 @@
 
 body {
   background-color: #21325e; /* Your desired background color */
-  
+
 }
 
 .project {
@@ -18,7 +18,7 @@ body {
 
   .project h1 {
     margin-top: 50px;
-    color: #3e497a;
+    color: white;
     font-size: 35px;
     font-weight: lighter;
 
@@ -31,7 +31,7 @@ body {
 
   .project p {
     font-size: 40px;
-    color: #3e497a;
+    color: white;
     font-weight: lighter;
     font-size: 25px;
   }
