--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -37,7 +37,7 @@
     position: relative;
     padding-bottom: 70px;
     animation:
-    typing 1.5s steps(26, end),
+    typing 1.5s steps(26, end) 1.5s 1 normal both,
     blink-caret 0.5s linear infinite;
 }
 
